# kv-cache-store

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
include/: macro.h  opts.h  server.h
src/: main.c  server.c
tests/: default_tests.c
